0028687: Offset for open wire is built with incorrect direction

Added new condition to exclude offsetting non closed part of circle as complete circle