src/BRepFill/BRepFill_OffsetWire.cxx
@@ -283,6 +283,10 @@ static Standard_Boolean KPartCircle
     {
       if (E.Orientation() == TopAbs_FORWARD)
         anOffset *= -1;
+      if (!BRep_Tool::IsClosed(E))
+      {
+        anOffset *= -1;
+      }
       gp_Circ2d theCirc = AHC->Circle();
       if (anOffset > 0. || Abs(anOffset) < theCirc.Radius())
         OC = new Geom2d_Circle (theCirc.Position(), theCirc.Radius() + anOffset);
